--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.9.1",
     "htmx.org": "2.0.4",
     "nanoid": "^5.1.5",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "xss": "^1.0.15"
   }
 }
